--- a/roles/consul/tasks/config.yml
+++ b/roles/consul/tasks/config.yml
@@ -1,6 +1,14 @@
+- name: Add current host into 'consulServers'
+  add_host:
+    name: "{{ inventory_hostname }}"
+    groups: consulServers
+  when:
+    - (groups['all'] | count) >= 3
+    - inventory_hostname in (groups['all'][:3] )
+
 - block:
     - include_vars:
-        file: roles/deploy.Consul/vars/key.yml
+        file: vars/consul_key.yml
   rescue:
     - include_tasks: keygen.yml
     - include_tasks: config.yml
@@ -10,47 +18,13 @@
     src: '{{ item.src }}.j2'
     dest: '{{ item.dest }}'
   with_items:
-    - src: config.json
+    - src: consul/config.json
       dest: /etc/consul.d/config.json
     - src: consul.service
       dest: /etc/systemd/system/consul.service
     - src: consul-dns.service
       dest: /etc/systemd/system/consul-dns.service
   notify: Restart consul
-
-- name: Updating services config
-  template:
-    src: 'service_{{ item }}.json.j2'
-    dest: '/etc/consul.d/{{ item }}.json'
-  when: "item in group_names"
-  with_items:
-    - elasticsearch
-    - logstash
-    - kibana
-    - redis
-  notify: Restart consul
-  register: templates
-
-- name: Listing current config files
-  shell: "ls *.json | grep -v config"
-  args:
-    chdir: /etc/consul.d/
-  ignore_errors: True
-  changed_when: false
-  register: allTemplates
-
-# - debug:
-#     msg: "{{ templates.results|selectattr('item', 'string')|map(attribute='item')|list }}"
-#
-# - debug:
-#     msg: "{{ allTemplates.stdout_lines }}"
-#
-# - name: Removing unmanaged config files
-#   file:
-#     path: "/etc/consul.d/{{ item }}"
-#     state: absent
-#   when: "item not in templates.results|selectattr('item', 'string')|map(attribute='item')|list "
-#   with_items: "{{ allTemplates.stdout_lines }}"
 
 - block:
     - name: Checking local port 53
