--- a/roles/consul/tasks/install.yml
+++ b/roles/consul/tasks/install.yml
@@ -1,7 +1,7 @@
 - block:
     - name: Uploading command file
       copy:
-        src: "downloaded_files/consul-{{ consul_version }}"
+        src: "downloaded_files/consul-{{ consul.version }}"
         dest: /usr/local/bin/consul
         mode: 0755
       notify: Restart consul
