--- a/hosts.ini
+++ b/hosts.ini
@@ -4,3 +4,7 @@ elk-docker ansible_host=172.28.128.10 ansible_user='vagrant' ansible_ssh_pass='v
 elk-docker
 
 [consulServers]
+elk-docker
+
+[nomadServers]
+elk-docker
